<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".SelectedPlaylistFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clFragmentSelectedPlaylist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/ivPlaylist"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvPlaylistDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/playlist_description_hint_text"
                android:textColor="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/ivPlaylist"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/tvPlaylistFollowers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/playlist_total_followers_hint_text"
                android:textColor="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/tvPlaylistDesc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/separator"/>

            <TextView
                android:id="@+id/separator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/point_separator"
                android:textColor="@color/gray"
                app:layout_constraintTop_toTopOf="@+id/tvPlaylistFollowers"
                app:layout_constraintStart_toEndOf="@+id/tvPlaylistFollowers"
                app:layout_constraintEnd_toStartOf="@+id/tvPlaylistDuration"/>

            <TextView
                android:id="@+id/tvPlaylistDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/total_playlist_duration_hint_text"
                android:layout_marginStart="10dp"
                android:textColor="@color/gray"
                app:layout_constraintTop_toTopOf="@+id/separator"
                app:layout_constraintStart_toEndOf="@+id/separator"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/btnPlayCircle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_green_round_play_circle"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clFragmentSelectedPlaylist"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPlaylistTracks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/btnPlayCircle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>