<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".BigCurrentTrackFragment">

    <FrameLayout
        android:id="@+id/list_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:translationZ="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="15dp">

        <ImageView
            android:id="@+id/btn_hidden_fragment"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_hidden_big_current_track"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <ImageView
            android:id="@+id/ivTrackAlbum"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginHorizontal="25dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_hidden_fragment" />

        <TextView
            android:id="@+id/tvTrackName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/big_current_track_name_hint_text"
            android:textSize="25sp"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="25dp"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="-1"
            android:scrollHorizontally="true"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@+id/ivTrackAlbum"/>

        <TextView
            android:id="@+id/tvTrackArtist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:text="@string/big_current_track_author_hint_text"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="25dp"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@+id/tvTrackName"/>

        <ProgressBar
            android:id="@+id/trackProgressBar"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:progress="50"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="25dp"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            app:layout_constraintTop_toBottomOf="@+id/tvTrackArtist"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/currentPlayerTimePosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:text="@string/progress_bar_progress_hint_text"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/trackProgressBar"
            app:layout_constraintStart_toStartOf="@+id/trackProgressBar"/>

        <TextView
            android:id="@+id/totalTrackDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:text="@string/progress_bar_duration_hint_text"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/trackProgressBar"
            app:layout_constraintEnd_toEndOf="@+id/trackProgressBar"/>

        <ImageView
            android:id="@+id/btnPrev"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_white_round_previous"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintTop_toTopOf="@+id/middleBtn"
            app:layout_constraintBottom_toBottomOf="@+id/middleBtn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <ImageView
            android:id="@+id/middleBtn"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/ic_white_round_pause_circle"
            android:layout_marginTop="30dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/trackProgressBar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <ImageView
            android:id="@+id/btnNext"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_white_round_next"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintTop_toTopOf="@+id/middleBtn"
            app:layout_constraintBottom_toBottomOf="@+id/middleBtn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>