<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="15dp"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/bigCurrentTrackView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:translationZ="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <FrameLayout
        android:id="@+id/flPlaylist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:translationZ="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_text_view"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/svSongs"/>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/svSongs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/search_view_border_background"
        android:actionBarWidgetTheme="@color/black"
        android:inputType="none"
        app:queryHint="@string/search_search_view"
        app:layout_constraintTop_toBottomOf="@+id/tvSearch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/rvPlaylist"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPlaylist"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:paddingStart="5dp"
        app:layout_constraintTop_toBottomOf="@+id/svSongs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clCurrentTrack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/current_track_fragment_background"
        android:elevation="20dp"
        android:visibility="invisible"
        tools:context=".CurrentTrackPlaying"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvTrackAlbum"
            app:cardCornerRadius="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/ivTrackAlbum"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvTrackName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/current_track_name_text_view"
            android:textColor="@color/white"
            android:layout_marginStart="15dp"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cvTrackAlbum"/>

        <ImageView
            android:id="@+id/cl_current_track_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/gray"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>